syntax = "proto3";
package studentgrpc;

// Define our service and the method
service Student {
    rpc GetStudent(StudentRequest) returns (StudentResponse);
}


// The student request message
message StudentRequest {
    string name = 1;
    int32 age = 3;
    string faculty = 2;
    Discipline discipline = 4;
}


enum Discipline {
    ninguna = 0;
    natacion = 1;
    atletismo = 2;
    boxeo = 3;
}

message StudentResponse {
    bool success = 1;
}